--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.0",
+    "mongoose-unique-validator": "^4.0.1"
   }
 }
