--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "cloudinary": "^1.41.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
     "mongoose-unique-validator": "^4.0.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "sharp": "^0.33.5"
   }
 }
